cdk-cats-secure.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: cdk-armourcat
  name: cdk-armourcat
spec:
  replicas: 4
  selector:
    matchLabels:
      app: cdk-armourcat
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cdk-armourcat
      annotations:
        container.apparmor.security.beta.kubernetes.io/cdk-armourcat: runtime/default
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 2000
      containers:
        - image: chrisprocter/armourcat:v3
          securityContext:
            allowPrivilegeEscalation: false
          imagePullPolicy: ""
          name: cdk-armourcat
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 30
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: cdk-armourcat-cluster
spec:
  type: ClusterIP
  selector:
    app: cdk-armourcat
  ports:
  - name: cdk-armourcat-port
    protocol: TCP
    port: 7070
    targetPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: cdk-armourcat
spec:
  type: NodePort
  selector:
     app: cdk-armourcat
  ports:
  - name: cdk-armourcat
    protocol: TCP
    nodePort: 30081
    port: 80
    targetPort: 80
